--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
         <title>coursera</title>
     </head>
     <body>
-        <h1>Hello Coursera ci</h1>
+        <h1>Hello Cour</h1>
     </body>
 </html>
